--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,7 @@
 base:
   project: winequality-project
   random_state: 42
-  target_col: TARGET
+  target_col: quality
 
 data_source:
   s3_source: data_given/winequality_red.csv
@@ -17,8 +17,15 @@ split_data:
 estimators:
    ElasticNet:
      params:
-       alpha: 0.88
-       l1_ration0: 0.89
+       alpha: 0.9
+       l1_ratio: 0.4
 
 model_dir: saved_models
+
+
+reports:
+  params: report/params.json
+  scores: report/scores.json
+
+webapp_model_dir: prediction_service/model/model.joblib
 
