--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,13 @@
 [tox]
 envlist = py37
-skipdist = True
+; skipdist = True
 
 [testenv]
 deps = -rrequiremnts.txt
 commands = 
+    # stop the build if there are python syntax errors or undefined errors
+    flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
+    # exit-zero treats all errors as warnings, the github editor is 127character wide
+    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     pytest -v
