--- a/dvc.yaml
+++ b/dvc.yaml
@@ -28,10 +28,17 @@ stages:
     params:
     - estimators.ElasticNet.params.alpha
     - estimators.ElasticNet.params.l1_ratio
-    metrics:
-    - report/scores.json:
-        cache: false
-    - report/params.json:
-        cache: false
-    outs:
-    - saved_models/model.joblib
+   # metrics:
+   #- report/scores.json:
+   #     cache: false
+   # - report/params.json:
+   #     cache: false
+   # outs:
+   # - saved_models/model.joblib
+
+   #based on the certain parameters we will choose our model 
+   # log_production_model:
+   # cmd: python src/log_production_model.py --config=params.yaml
+   # deps:
+   # - src/log_production_model.py
+
