--- a/params.yaml
+++ b/params.yaml
@@ -29,3 +29,9 @@ reports:
 
 webapp_model_dir: prediction_service/model/model.joblib
 
+mlflow_config:
+  artifacts_dir: artifacts
+  experiment_name: ElasticNet regression1
+  run_name: mlops
+  registered_model_name: ElasticNetWineModel
+  remote_server_uri: http://127.0.0.1:5000/
