--- a/dvc.yaml
+++ b/dvc.yaml
@@ -37,8 +37,8 @@ stages:
    # - saved_models/model.joblib
 
    #based on the certain parameters we will choose our model 
-   # log_production_model:
-   # cmd: python src/log_production_model.py --config=params.yaml
-   # deps:
-   # - src/log_production_model.py
+    log_production_model:
+    cmd: python src/log_production_model.py --config=params.yaml
+    deps:
+    - src/log_production_model.py
 
